log/build_2025-10-12_22-23-23/my_py_pkg/stderr.log
  File "/home/adi/RosProjects/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/PredatorTurtle.py", line 23
    msg.x_coordinate = 
                       ^
SyntaxError: invalid syntax

